// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StateMessage visual snapshots > empty variant matches snapshot 1`] = `
<div
  aria-live="polite"
  class="flex flex-col px-4 py-6 gap-3 items-center justify-center"
>
  <p
    class="text-foreground text-sm text-center"
  >
    No messages yet.
  </p>
</div>
`;

exports[`StateMessage visual snapshots > error variant with retry matches snapshot 1`] = `
<div
  aria-live="assertive"
  class="flex flex-col px-4 py-6 gap-3 items-center justify-center"
  style="color: var(--color-red-600, #dc2626);"
>
  <p
    class="text-foreground text-sm text-center"
  >
    Something went wrong.
  </p>
</div>
`;

exports[`StateMessage visual snapshots > loading variant matches snapshot 1`] = `
<div
  aria-live="polite"
  class="flex flex-col px-4 py-6 gap-3 items-center justify-center"
  role="status"
>
  <div
    class="inline-flex items-center gap-1.5"
    data-size="lg"
    role="status"
  >
    <div
      aria-hidden="true"
      class="animate-spin rounded-full border-current border-t-transparent flex-shrink-0 h-6 w-6 border-2"
    />
    <span
      class="sr-only"
    >
      Loading
    </span>
  </div>
  <p
    class="text-foreground text-sm text-center"
  >
    Connecting…
  </p>
</div>
`;
